--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(user) do |f| %>
+<div class="contentMiddle">
+ <%= form_for(user) do |f| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -25,3 +26,4 @@
     <%= f.submit %>
   </div>
 <% end %>
+</div>
