--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,10 @@
+    
 <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
 
-<table>
+<table class="myTable">
+ <caption class="tableCaption">Users</caption>
+
   <thead>
     <tr>
       <th>Name</th>
@@ -26,4 +28,8 @@
 
 <br>
 
+<div class=links>
+<h3>Link to other pages :</h3>
 <%= link_to 'New User', new_user_path %>
+<%= link_to 'Microposts', "/microposts" %>
+</div>
