removed test controller

--- a/app/views/intro/welcome.html.erb
+++ b/app/views/intro/welcome.html.erb
@@ -2,7 +2,7 @@
     
 <div class="contentMiddle">
 <p class="introHeader">Hello ! Welcome to <b>Whisper</b></p>
-<a class="introLinks" href="/users">see the Users</a>
-<a class="introLinks" href="/microposts">see the Posts</a>
+<a class="introLinks" href="/users">Users</a>
+<a class="introLinks" href="/microposts">Posts</a>
 </div>
 </body>
